--- a/src/app/[locale]/components/shared/chart.scss
+++ b/src/app/[locale]/components/shared/chart.scss
@@ -43,19 +43,7 @@
   }
 }
 
-.profile__chart__header__block {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 20px;
-  color: white;
 
-  @media (max-width: 768px) {
-    flex-direction: column;
-    align-items: flex-start;
-    gap: 10px;
-  }
-}
 
 .profile__chart__header {
   flex: 1;
@@ -88,24 +76,7 @@
   }
 }
 
-.profile__chart__button {
-  background-color: #6b6b6b;
-  border: none;
-  box-shadow: var(--shadow-split);
-  font-size: 12px;
-  border-radius: 10px;
-  cursor: pointer;
-  transition: background-color 0.3s, color 0.3s;
-  white-space: nowrap; /* Предотвращает перенос текста */
-  min-width: 80px;
-  &:hover {
-    background-color: #6b6b6b;
-  }
 
-  @media (max-width: 768px) {
-    font-size: 14px;
-  }
-}
 
 .profile__chart__buttons-wrapper {
   display: flex;
@@ -113,11 +84,13 @@
   margin: 0 auto;
   align-items: center;
   text-align: center;
+
+  svg {
+    max-width: 18px;
+    width: 100%;
+  }
 }
-.profile__chart__button--active {
-  background-color: #007bff;
-  color: white;
-}
+
 
 .slider-arrow {
   background-color: transparent;
