--- a/src/app/[locale]/page.scss
+++ b/src/app/[locale]/page.scss
@@ -2523,7 +2523,6 @@ header {
 // ? profile
 .profile__body {
   padding-bottom: 6.5rem;
-  min-height: 100vh;
 
   header {
     &.box-shadow {
@@ -3919,9 +3918,8 @@ header {
 .Tapbar {
   padding: 10px;
   backdrop-filter: blur(4.5px);
-  z-index: 999;
+  z-index: 998;
 }
-
 .Tapbar__item {
   display: flex;
   flex-direction: column;
@@ -3933,4 +3931,102 @@ header {
   line-height: 16px;
   font-weight: 400;
   text-align: center;
+}
+.profile__body {
+  .profile__burger {
+    overflow: hidden;
+  }
+}
+
+.profile__burger {
+  position: relative;
+  position: fixed;
+  z-index: 9999 !important;
+
+  .m_header__profile_menu {
+    position: absolute;
+    top: 35px;
+    left: 32px;
+  }
+
+  &-bg {
+    position: absolute;
+    bottom: -40px;
+    left: 0;
+    width: auto;
+    height: auto;
+    max-width: 105%;
+    object-fit: cover;
+    z-index: -1;
+  }
+  &-container {
+    padding: 83px 32px 38px 32px;
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+  }
+  &-devider {
+    min-height: 1px;
+    width: 100%;
+    display: block;
+    background: var(--burger-span);
+    margin: 27px 0;
+  }
+  .sec__title {
+    color: var(--text-color);
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 28px;
+    font-family: inherit;
+  }
+  section > div > div > span {
+    color: var(--text-color);
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 20px;
+  }
+
+  &-info {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+    h5 {
+      color: var(--text-color);
+      font-size: 20px;
+      font-weight: 500;
+      line-height: 28px;
+
+      @media (max-width: 430px) {
+        font-size: 14px;
+      }
+    }
+    span {
+      color: var(--gray-color);
+    }
+  }
+
+  &-shortcuts {
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+  }
+
+  &-assets {
+    display: flex;
+    flex-direction: column;
+  }
+
+  &-footer {
+    display: flex;
+    flex-direction: column;
+    gap: 54px;
+
+    a {
+      font-size: 14px;
+      font-weight: 400;
+      line-height: 20px;
+      color: var(--text-color);
+    }
+  }
 }
