--- a/src/app/[locale]/page.scss
+++ b/src/app/[locale]/page.scss
@@ -2524,9 +2524,19 @@ header {
 .profile__body {
   padding-bottom: 6.5rem;
 
+  .profile__burger {
+    overflow: hidden;
+  }
+
   header {
     &.box-shadow {
       box-shadow: 0 0 20px #073d95;
+    }
+
+    .header__navigation {
+      @media (max-width: 992px) {
+        display: none;
+      }
     }
 
     .header__logo {
@@ -2542,6 +2552,8 @@ header {
     position: fixed;
     z-index: 10;
     width: 428px;
+    height: 100dvh;
+    height: calc(var(--vh, 1vh) * 100); 
     top: 0;
     left: 0;
     bottom: 0;
@@ -3932,15 +3944,11 @@ header {
   font-weight: 400;
   text-align: center;
 }
-.profile__body {
-  .profile__burger {
-    overflow: hidden;
-  }
-}
 
 .profile__burger {
   position: relative;
   position: fixed;
+  overflow: hidden !important;
   z-index: 9999 !important;
 
   .m_header__profile_menu {
