--- a/src/app/[locale]/page.scss
+++ b/src/app/[locale]/page.scss
@@ -2553,7 +2553,7 @@ header {
     z-index: 10;
     width: 428px;
     height: 100dvh;
-    height: calc(var(--vh, 1vh) * 100); 
+    height: calc(var(--vh, 1vh) * 100);
     top: 0;
     left: 0;
     bottom: 0;
@@ -3968,7 +3968,7 @@ header {
     z-index: -1;
   }
   &-container {
-    padding: 83px 32px 38px 32px;
+    padding: 83px 0 38px 0;
     display: flex;
     flex-direction: column;
     gap: 15px;
@@ -4018,11 +4018,28 @@ header {
     display: flex;
     flex-direction: column;
     gap: 8px;
+
+    img {
+      max-width: 50px;
+      width: 100%;
+      height: auto;
+      object-fit: contain;
+    }
   }
 
   &-assets {
     display: flex;
     flex-direction: column;
+    gap: 8px;
+    div {
+      max-height: 70px;
+    }
+    img {
+      max-width: 50px;
+      width: 100%;
+      height: auto;
+      object-fit: contain;
+    }
   }
 
   &-footer {
