--- a/src/app/[locale]/page.scss
+++ b/src/app/[locale]/page.scss
@@ -3959,12 +3959,11 @@ header {
 
   &-bg {
     position: absolute;
-    bottom: -40px;
-    left: 0;
-    width: auto;
+    bottom: 3px;
+    left: -40px;
+    max-width: 457px !important;
     height: auto;
-    max-width: 105%;
-    object-fit: cover;
+    object-fit: contain;
     z-index: -1;
   }
   &-container {
@@ -3972,6 +3971,12 @@ header {
     display: flex;
     flex-direction: column;
     gap: 15px;
+
+    @media (max-width: 375px) {
+      gap: 5px;
+    padding: 70px 0 0 0;
+
+    }
   }
   &-devider {
     min-height: 1px;
