--- a/src/app/[locale]/page.scss
+++ b/src/app/[locale]/page.scss
@@ -2522,7 +2522,12 @@ header {
 
 // ? profile
 .profile__body {
-  padding-bottom: 6.5rem;
+  min-height: 100vh;
+  padding-bottom: 1rem;
+
+  @media (max-width: 430px) {
+    padding-bottom: 5rem;
+  }
 
   .profile__burger {
     overflow: hidden;
@@ -2534,13 +2539,13 @@ header {
     }
 
     .header__navigation {
-      @media (max-width: 992px) {
+      @media (max-width: 1014px) {
         display: none;
       }
     }
 
     .header__logo {
-      @media (max-width: 992px) {
+      @media (max-width: 430px) {
         display: none;
       }
     }
@@ -2555,14 +2560,14 @@ header {
     height: 100dvh;
     height: calc(var(--vh, 1vh) * 100);
     top: 0;
-    left: 0;
+    right: 0;
     bottom: 0;
     overflow-y: auto;
     background-color: var(--bg-mobile);
     transform-origin: 0 0;
     list-style-type: none;
     transition: 0.3s all ease-in-out;
-    transform: translateX(-100%);
+    transform: translateX(100%);
 
     @media (max-width: 442px) {
       width: 100vw;
@@ -2579,15 +2584,15 @@ header {
     cursor: pointer;
     width: 30px;
     height: 20px;
-    z-index: 9999;
+    z-index: 9998;
     transition: 0.3s all ease-in-out;
 
     &:active {
       scale: 1.2;
     }
 
-    @media (max-width: 992px) {
-      display: block;
+    @media (max-width: 1014px) {
+      display: flex;
     }
   }
 
@@ -3898,53 +3903,6 @@ header {
   width: 100%;
   padding: 2.5rem 1rem;
 }
-
-/* Переопределение цвета для текста календаря */
-.react-datepicker {
-  background-color: var(--bg-mobile) !important; /* Задаем нужный цвет фона */
-}
-
-.react-datepicker__header {
-  background-color: var(--getstarted-item) !important;
-  color: var(--text-color) !important;
-}
-.react-datepicker__current-month,
-.react-datepicker__day-name,
-.react-datepicker__day {
-  color: var(--text-color) !important;
-}
-.react-datepicker__day {
-  outline: 1px solid var(--blue);
-  border-radius: 2px;
-}
-.react-datepicker__day,
-.react-datepicker__day:hover {
-  color: white; /* Цвет текста дней */
-}
-
-.react-datepicker__day--selected {
-  background-color: #ff4757; /* Цвет выделенного дня */
-  color: white; /* Цвет текста выделенного дня */
-}
-
-.Tapbar {
-  padding: 10px;
-  backdrop-filter: blur(4.5px);
-  z-index: 998;
-}
-.Tapbar__item {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 5px;
-  color: black;
-  font-family: inherit;
-  font-size: 13px;
-  line-height: 16px;
-  font-weight: 400;
-  text-align: center;
-}
-
 .profile__burger {
   position: relative;
   position: fixed;
@@ -3960,8 +3918,8 @@ header {
   &-bg {
     position: absolute;
     bottom: 3px;
-    left: -40px;
-    max-width: 457px !important;
+    left: -26px;
+    max-width: 510px !important;
     height: auto;
     object-fit: contain;
     z-index: -1;
@@ -3972,10 +3930,13 @@ header {
     flex-direction: column;
     gap: 15px;
 
-    @media (max-width: 375px) {
+    @media (max-width: 768px) {
       gap: 5px;
-    padding: 70px 0 0 0;
-
+      padding: 70px 0 0 0;
+    }
+    @media (max-width: 430px) {
+      gap: 5px;
+      padding: 70px 0 0 0;
     }
   }
   &-devider {
@@ -4057,6 +4018,184 @@ header {
       font-weight: 400;
       line-height: 20px;
       color: var(--text-color);
+    }
+  }
+}
+.personal {
+  background: var(--how-itemBg-bubble);
+  display: flex;
+  flex-direction: column;
+  border-radius: 30px;
+  padding: 40px 98px 48px 45px;
+  box-shadow: 0 0 5px #3333;
+
+  @media (max-width: 1024px) {
+    padding: 40px 48px 48px 45px;
+  }
+  @media (max-width: 768px) {
+    padding: 40px 20px;
+  }
+  @media (max-width: 430px) {
+    margin-top: 7rem;
+  }
+  &-container {
+    flex-grow: 1;
+  }
+  &-inner {
+    @media (max-width: 1024px) {
+      flex-direction: column;
+      align-items: center;
+    }
+  }
+
+  &__content {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+
+    &-title {
+      color: var(--text-color);
+      font-size: 32px;
+      font-weight: 500;
+      line-height: 40px;
+      padding-bottom: 16px;
+      display: flex;
+      align-items: center;
+      gap: 14px;
+
+      @media (max-width: 1024px) {
+        font-size: 24px;
+      }
+
+      img {
+        max-width: 44px;
+        width: 100%;
+        height: auto;
+      }
+    }
+    span {
+      color: var(--text-color);
+      font-size: 18px;
+      line-height: 24px;
+      font-weight: 400;
+      width: 100%;
+      text-align: left;
+      display: flex;
+      align-items: center;
+      gap: 3px;
+
+      @media (max-width: 1024px) {
+        font-size: 14px;
+      }
+      @media (max-width: 430px) {
+        font-size: 12px;
+      }
+
+      svg {
+        max-height: 24px;
+        height: auto;
+        width: auto;
+
+        @media (max-width: 1024px) {
+          max-height: 20px;
+        }
+      }
+    }
+    button {
+      color: var(--profile-balance-blue);
+      font-size: 18px;
+      font-weight: 500;
+      line-height: 24px;
+      width: 100%;
+      max-width: 140px;
+      border-radius: 50px;
+      border: 1px solid var(--profile-balance-blue);
+      transition: 0.3s all ease-in-out;
+
+      @media (max-width: 1024px) {
+        font-size: 14px;
+      }
+
+      &:hover {
+        border: 1px solid var(--blue);
+        color: var(--blue);
+      }
+    }
+  }
+}
+
+// ! trash
+.react-datepicker {
+  background-color: var(--bg-mobile) !important; /* Задаем нужный цвет фона */
+}
+.react-datepicker__header {
+  background-color: var(--getstarted-item) !important;
+  color: var(--text-color) !important;
+}
+.react-datepicker__current-month,
+.react-datepicker__day-name,
+.react-datepicker__day {
+  color: var(--text-color) !important;
+}
+.react-datepicker__day {
+  outline: 1px solid var(--blue);
+  border-radius: 2px;
+}
+.react-datepicker__day,
+.react-datepicker__day:hover {
+  color: white; /* Цвет текста дней */
+}
+
+.react-datepicker__day--selected {
+  background-color: #ff4757; /* Цвет выделенного дня */
+  color: white; /* Цвет текста выделенного дня */
+}
+
+.Tapbar {
+  // padding: 10px;
+  backdrop-filter: blur(4.5px);
+  z-index: 999999;
+  max-height: 72px;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  padding-bottom: 10px;
+}
+.Tapbar__item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-end;
+  color: var(--text-color);
+  font-family: inherit;
+  font-size: 13px;
+  line-height: 16px;
+  font-weight: 400;
+  text-align: center;
+  max-height: 71px;
+  min-height: 71px;
+
+  .lottie {
+  
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: 0.3s all ease-in-out;
+
+    &.round {
+      background: var(--blue) !important;
+      border-radius: 50%;
+      max-width: 70px !important;
+      max-height: 70px !important;
+      
+    }
+
+    canvas {
+      width: 100%;
+      min-width: 60px !important;
+      min-height: 60px !important;
+      max-width: 60px !important;
+      max-height: 60px !important;
     }
   }
 }
