--- a/src/app/[locale]/page.scss
+++ b/src/app/[locale]/page.scss
@@ -3920,6 +3920,7 @@ header {
     bottom: 3px;
     left: -26px;
     max-width: 510px !important;
+    width: auto;
     height: auto;
     object-fit: contain;
     z-index: -1;
@@ -4106,14 +4107,21 @@ header {
       font-size: 18px;
       font-weight: 500;
       line-height: 24px;
-      width: 100%;
-      max-width: 140px;
+      width: fit-content;
       border-radius: 50px;
+      padding: 10px 18px;
       border: 1px solid var(--profile-balance-blue);
       transition: 0.3s all ease-in-out;
+      min-width: 104px;
+      display: flex;
+      justify-content: center;
+      flex-shrink: 0;
 
       @media (max-width: 1024px) {
         font-size: 14px;
+      }
+      @media (max-width: 1024px) {
+        padding: 0;
       }
 
       &:hover {
@@ -4157,7 +4165,7 @@ header {
   z-index: 998;
   max-height: 72px;
   position: fixed;
-  bottom: 0;
+  bottom: -3px;
   left: 0;
   padding-bottom: 10px;
 }
@@ -4175,6 +4183,8 @@ header {
   max-height: 71px;
   min-height: 71px;
 
+
+
   &-text {
     margin-top: -10px;
   }
@@ -4186,20 +4196,26 @@ header {
     transition: 0.3s all ease-in-out;
 
     &.round {
-      background: var(--blue) !important;
       border-radius: 50%;
-      max-width: 70px !important;
-      max-height: 70px !important;
+      background: rgb(63, 126, 243);
       position: absolute;
-      bottom: 25px;
+      bottom: 26px;
+      min-height: 70px;
+      box-shadow: 4px 4px 56px 0px rgba(177, 177, 181, 0.25);
+      backdrop-filter: blur(6px);
+      filter: none !important; 
     }
 
+    &.active {
+      filter: invert(38%) sepia(78%) saturate(542%) hue-rotate(189deg) brightness(94%) contrast(89%);
+    }
+    
     canvas {
       width: 100%;
       min-width: 60px !important;
       min-height: 60px !important;
-      max-width: 60px !important;
-      max-height: 60px !important;
+      max-width: 70px !important;
+      max-height: 70px !important;
     }
   }
 }
